fixed tracking message bug
fixed tracking message bug

--- a/yoctoazel.exe.config
+++ b/yoctoazel.exe.config
@@ -82,6 +82,12 @@
             <setting name="path_wsjt" serializeAs="String">
                 <value>C:\WSJT-10.0\azel.dat</value>
             </setting>
+            <setting name="motor_el_limit_upper" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="motor_el_limit_lower" serializeAs="String">
+                <value>0</value>
+            </setting>
         </yoctoazel.Properties.Settings>
     </userSettings>
     <applicationSettings>
