Added Magnetic Declination
"Options" > "Setup" > "M. Decl"

--- a/yoctoazel.exe.config
+++ b/yoctoazel.exe.config
@@ -88,6 +88,9 @@
             <setting name="motor_el_limit_lower" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="myMagDecl" serializeAs="String">
+                <value>0</value>
+            </setting>
         </yoctoazel.Properties.Settings>
     </userSettings>
     <applicationSettings>
